--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
 		"url": "https:/github.com/vidbase/vidbase.dev"
 	},
 	"workspaces": [
-		"packages/*"
+		"packages/*",
+		"examples/*"
 	],
 	"prettier": {
 		"trailingComma": "none",
