--- a/packages/prefers-mode/package.json
+++ b/packages/prefers-mode/package.json
@@ -22,8 +22,7 @@
 	"author": "Van Nguyen <thegoleffect@gmail.com>",
 	"homepage": "https://vidbase.dev/packages/prefers-mode",
 	"license": "MIT",
-	"main": "build/index.js",
-	"types": "build/index.d.ts",
+	"main": "src/index.ts",
 	"repository": {
 		"type": "git",
 		"url": "git+https://github.com/vidbase/vidbase.dev.git",
@@ -34,5 +33,8 @@
 	},
 	"publishConfig": {
 		"access": "public"
+	},
+	"dependencies": {
+		"react": "^16.13.1"
 	}
 }
