--- a/package.json
+++ b/package.json
@@ -26,8 +26,7 @@
 		"url": "https:/github.com/vidbase/vidbase.dev"
 	},
 	"workspaces": [
-		"packages/*",
-		"examples/*"
+		"packages/*"
 	],
 	"prettier": {
 		"trailingComma": "none",
