--- a/package.json
+++ b/package.json
@@ -40,7 +40,14 @@
 	"engines": {
 		"node": ">= 10.14.2"
 	},
+	"dependencies": {
+		"@types/react": "^16.9.52",
+		"@types/react-dom": "^16.9.4",
+		"react": "^16.14.0",
+		"react-dom": "^16.14.0"
+	},
 	"devDependencies": {
-		"lerna": "^3.20.2"
+		"lerna": "^3.20.2",
+		"typescript": "4.0"
 	}
 }
