--- a/packages/radui/package.json
+++ b/packages/radui/package.json
@@ -47,17 +47,11 @@
 		"jest": "^26.5.3",
 		"microbundle": "^0.12.4",
 		"ts-jest": "^26.4.1",
-		"ts-node": "^9.0.0",
-		"typescript": "^4.0.3"
-	},
-	"peerDependencies": {
-		"react": "^16.14.0"
+		"ts-node": "^9.0.0"
 	},
 	"dependencies": {
 		"@types/jest": "^26.0.14",
 		"@types/node": "^14.11.9",
-		"@types/react": "^16.9.52",
-		"@types/react-dom": "^16.9.8",
 		"@types/styled-components": "^5.1.4",
 		"classnames": "^2.2.6",
 		"styled-components": "^5.2.0",
