--- a/examples/radui/package.json
+++ b/examples/radui/package.json
@@ -18,6 +18,7 @@
 		"react-dom": "^16.14.0",
 		"sass": "^1.27.0",
 		"scss": "^0.2.4",
+		"styled-components": "^5.2.0",
 		"tailwindcss": "^1.9.3"
 	},
 	"devDependencies": {
