--- a/examples/radui/package.json
+++ b/examples/radui/package.json
@@ -10,6 +10,7 @@
 	"dependencies": {
 		"@fullhuman/postcss-purgecss": "^3.0.0",
 		"@stitches/react": "^0.0.2",
+		"@types/styled-components": "^5.1.4",
 		"next": "^9.5.5",
 		"next-transpile-modules": "^4.1.0",
 		"postcss-flexbugs-fixes": "^4.2.1",
