--- a/package.json
+++ b/package.json
@@ -43,8 +43,10 @@
 	"dependencies": {
 		"@types/react": "^16.9.52",
 		"@types/react-dom": "^16.9.4",
+		"@types/styled-components": "^5.1.4",
 		"react": "^16.14.0",
-		"react-dom": "^16.14.0"
+		"react-dom": "^16.14.0",
+		"styled-components": "^5.2.0"
 	},
 	"devDependencies": {
 		"lerna": "^3.20.2",
