--- a/packages/radui/package.json
+++ b/packages/radui/package.json
@@ -23,8 +23,8 @@
 		"url": "git+https://github.com/vidbase/vidbase.dev.git"
 	},
 	"source": "src/index.tsx",
-	"main": "dist/radui.js",
-	"module": "dist/radui.modern.js",
+	"main": "dist/core.js",
+	"module": "dist/core.modern.js",
 	"types": "dist/index.d.ts",
 	"files": [
 		"dist",
@@ -52,9 +52,7 @@
 	"dependencies": {
 		"@types/jest": "^26.0.14",
 		"@types/node": "^14.11.9",
-		"@types/styled-components": "^5.1.4",
 		"classnames": "^2.2.6",
-		"styled-components": "^5.2.0",
 		"styled-media-query": "^2.1.2"
 	}
 }
