--- a/packages/prefers-mode/package.json
+++ b/packages/prefers-mode/package.json
@@ -1,28 +1,27 @@
 {
 	"name": "prefers-mode",
-	"version": "0.0.2",
-	"description": "Detect & listen to preferences for prefers-color-scheme & prefers-reduced-motion.",
-	"keywords": [
-		"prefers-color-scheme",
-		"prefers-reduced-motion",
-		"prefers",
-		"system",
-		"preference",
-		"dark",
-		"mode",
-		"light",
-		"mode",
-		"reduced",
-		"motion",
-		"vestibular",
-		"disorder",
-		"motion",
-		"sickness"
-	],
+	"version": "0.0.3",
+	"description": "Detect & listen to preferences for prefers-color-scheme, prefers-reduced-motion, and prefers-contrast.",
 	"author": "Van Nguyen <thegoleffect@gmail.com>",
 	"homepage": "https://vidbase.dev/packages/prefers-mode",
 	"license": "MIT",
-	"main": "src/index.ts",
+	"main": "dist/prefers-mode.min.js",
+	"types": "src/index.d.ts",
+	"files": [
+		"dist"
+	],
+	"dependencies": {},
+	"scripts": {
+		"build": "node ./esbuild.js && npm run types",
+		"types": "tsc"
+	},
+	"peerDependencies": {
+		"react": ">= 16.0.0"
+	},
+	"devDependencies": {
+		"esbuild": "^0.12.14",
+		"typescript": "^4.3.5"
+	},
 	"repository": {
 		"type": "git",
 		"url": "git+https://github.com/vidbase/vidbase.dev.git",
@@ -34,7 +33,15 @@
 	"publishConfig": {
 		"access": "public"
 	},
-	"dependencies": {
-		"react": "^16.14.0"
-	}
+	"keywords": [
+		"prefers-color-scheme",
+		"prefers-reduced-motion",
+		"prefers-contrast",
+		"prefers",
+		"dark mode",
+		"light mode",
+		"reduced motion",
+		"motion sickness",
+		"high contrast"
+	]
 }
