--- a/packages/prefers-mode/tsconfig.json
+++ b/packages/prefers-mode/tsconfig.json
@@ -1,12 +1,15 @@
 {
 	"compilerOptions": {
-		"outDir": "dist",
+		"outDir": "src",
+		"target": "esnext",
 		"module": "esnext",
 		"lib": ["dom", "esnext"],
 		"moduleResolution": "node",
 		"jsx": "react",
 		"sourceMap": true,
 		"declaration": true,
+		"emitDeclarationOnly": true,
+		"skipLibCheck": true,
 		"esModuleInterop": true,
 		"noImplicitReturns": true,
 		"noImplicitThis": true,
