--- a/packages/prefers-mode/tsconfig.json
+++ b/packages/prefers-mode/tsconfig.json
@@ -20,6 +20,6 @@
 		"noUnusedParameters": true,
 		"allowSyntheticDefaultImports": true
 	},
-	"include": ["src"],
+	"include": ["src/*.ts", "src/*.tsx"],
 	"exclude": ["node_modules", "dist"]
 }
