--- a/packages/prefers-mode/tsconfig.json
+++ b/packages/prefers-mode/tsconfig.json
@@ -1,6 +1,6 @@
 {
 	"compilerOptions": {
-		"outDir": "src",
+		"outDir": "types",
 		"target": "esnext",
 		"module": "esnext",
 		"lib": ["dom", "esnext"],
