--- a/examples/next-prefers-mode/package.json
+++ b/examples/next-prefers-mode/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "prefers-mode-example",
+	"name": "next-prefers-mode-example",
 	"version": "0.0.0",
 	"description": "example project using prefers-mode",
 	"main": "index.js",
