--- a/examples/next-prefers-theme/package.json
+++ b/examples/next-prefers-theme/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "next-prefers-theme-example",
 	"version": "0.0.0",
-	"description": "example project using prefers-mode theme provider",
+	"description": "example project using next-prefers-theme",
 	"main": "index.js",
 	"repository": "https:/github.com/vidbase/vidbase.dev",
 	"license": "MIT",
