--- a/.gitignore
+++ b/.gitignore
@@ -43,6 +43,7 @@ jspm_packages/
 
 # TypeScript v1 declaration files
 typings/
+@types
 
 # TypeScript cache
 *.tsbuildinfo
@@ -82,6 +83,7 @@ typings/
 
 # Nuxt.js build / generate output
 .nuxt
+
 # dist
 dist
 
