--- a/packages/next-prefers-theme/package.json
+++ b/packages/next-prefers-theme/package.json
@@ -28,10 +28,14 @@
 		"react-dom": "*"
 	},
 	"devDependencies": {
+		"@testing-library/jest-dom": "^5.14.1",
+		"@testing-library/react": "^12.0.0",
+		"@types/jest": "^26.0.24",
 		"@types/node": "^16.4.0",
 		"@vitejs/plugin-react-refresh": "^1.3.5",
 		"concurrently": "^6.2.0",
 		"jest": "^27.0.6",
+		"ts-jest": "^27.0.3",
 		"typescript": "^4.3.5",
 		"vite": "^2.4.3"
 	},
